Some helpers and improved keypressed

--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -71,6 +71,9 @@
     </Compile>
     <Compile Include="TextRender.cs" />
     <Compile Include="TextureRender.cs" />
+    <Compile Include="RectangleHelper.cs" />
+    <Compile Include="RectangleExtensions.cs" />
+    <Compile Include="Vector2Extensions.cs" />
     <Compile Include="VectorHelper.cs" />
   </ItemGroup>
   <ItemGroup>
