--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -64,7 +64,6 @@
     <Compile Include="GameHost.cs" />
     <Compile Include="MouseAction.cs" />
     <Compile Include="MouseManager.cs" />
-    <Compile Include="Texture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="FPSRender.cs" />
@@ -73,10 +72,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
+    <Compile Include="SpriteAnimation.cs" />
+    <Compile Include="SpriteAnimationRender.cs" />
+    <Compile Include="SpriteAnimationFrame.cs" />
     <Compile Include="TextRender.cs" />
+    <Compile Include="SpriteRender.cs" />
     <Compile Include="TextureRender.cs" />
     <Compile Include="RectangleHelper.cs" />
     <Compile Include="RectangleExtensions.cs" />
+    <Compile Include="Tile.cs" />
+    <Compile Include="Sprite.cs" />
+    <Compile Include="TileSet.cs" />
+    <Compile Include="TileSetRender.cs" />
     <Compile Include="Vector2Extensions.cs" />
     <Compile Include="VectorHelper.cs" />
   </ItemGroup>
