Integration of aseprite format for texture and sprite animations

--- a/FNAEngine2D.Tests/FNAEngine2D.Tests.csproj
+++ b/FNAEngine2D.Tests/FNAEngine2D.Tests.csproj
@@ -42,9 +42,15 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsepriteTest.cs" />
     <Compile Include="CollisionHelperTest.cs" />
     <Compile Include="ForceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="VectorHelperTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +69,16 @@
       <Project>{475f6e6d-9b4d-452f-85de-1353f6ae721e}</Project>
       <Name>FNAEngine2D</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Base.aseprite" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
