--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -78,7 +78,7 @@
     <Compile Include="Desginer\AngleControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Desginer\TileSetEditor.cs" />
+    <Compile Include="Desginer\TileSetUITypeEditor.cs" />
     <Compile Include="Desginer\AngleEditor.cs" />
     <Compile Include="Desginer\ContentDesigner.cs">
       <SubType>Form</SubType>
@@ -86,11 +86,11 @@
     <Compile Include="Desginer\ContentDesigner.Designer.cs">
       <DependentUpon>ContentDesigner.cs</DependentUpon>
     </Compile>
-    <Compile Include="Desginer\TileSetEditorForm.cs">
+    <Compile Include="Desginer\TileSetEditor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Desginer\TileSetEditorForm.Designer.cs">
-      <DependentUpon>TileSetEditorForm.cs</DependentUpon>
+    <Compile Include="Desginer\TileSetEditor.Designer.cs">
+      <DependentUpon>TileSetEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="EditModeHelper.cs" />
     <Compile Include="GameObjectTypesLoader.cs" />
@@ -104,7 +104,7 @@
     <Compile Include="GameContentObject.cs" />
     <Compile Include="IMouseEventHandler.cs" />
     <Compile Include="Input.cs" />
-    <Compile Include="InternalGameHost.cs" />
+    <Compile Include="InternalGame.cs" />
     <Compile Include="GameHost.cs" />
     <Compile Include="Layers.cs" />
     <Compile Include="MouseAction.cs" />
@@ -136,6 +136,8 @@
     <Compile Include="TileSetRender.cs" />
     <Compile Include="Vector2Extensions.cs" />
     <Compile Include="VectorHelper.cs" />
+    <Compile Include="Win32.cs" />
+    <Compile Include="WindowHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FNA-XNA-Wrapper">
@@ -155,8 +157,8 @@
     <EmbeddedResource Include="Desginer\ContentDesigner.resx">
       <DependentUpon>ContentDesigner.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Desginer\TileSetEditorForm.resx">
-      <DependentUpon>TileSetEditorForm.cs</DependentUpon>
+    <EmbeddedResource Include="Desginer\TileSetEditor.resx">
+      <DependentUpon>TileSetEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
