--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Asperite\PixelFormats\RGBAPixel.cs" />
     <Compile Include="Asperite\Utils\Texture2DBlender.cs" />
     <Compile Include="Asperite\Utils\Texture2DUtil.cs" />
+    <Compile Include="AverageCalculator.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="CharacterInput.cs" />
     <Compile Include="ColliderContainer.cs" />
@@ -173,6 +174,7 @@
     <None Include="Resources\empty_sfx.bin" />
     <None Include="Resources\pixel.bin" />
     <None Include="Resources\pixel_magenta.bin" />
+    <None Include="Resources\Roboto-Regular.bin" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\imgDelete.png" />
