Upgrade preview of ContentDesigner

--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -96,6 +96,7 @@
       <DependentUpon>TileSetEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="EditModeHelper.cs" />
+    <Compile Include="DebugInfoRender.cs" />
     <Compile Include="GameObjectTypesLoader.cs" />
     <Compile Include="DrawingContext.cs" />
     <Compile Include="Font.cs" />
