--- a/FNAEngine2D.Tests/FNAEngine2D.Tests.csproj
+++ b/FNAEngine2D.Tests/FNAEngine2D.Tests.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="AsepriteTest.cs" />
     <Compile Include="CollisionHelperTest.cs" />
+    <Compile Include="Communication\SocketChannelTest.cs" />
     <Compile Include="ForceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
@@ -52,6 +53,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="GameMathTest.cs" />
+    <Compile Include="Communication\CommandHelperTest.cs" />
     <Compile Include="VectorHelperTest.cs" />
   </ItemGroup>
   <ItemGroup>
