New GameLoop, rename InternalGameHost

--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -70,7 +70,9 @@
     <Compile Include="Communication\CommunicationChannel.cs" />
     <Compile Include="Communication\SocketChannel.cs" />
     <Compile Include="Communication\SocketServer.cs" />
+    <Compile Include="Databases\JsonDatabase.cs" />
     <Compile Include="ErrorHelper.cs" />
+    <Compile Include="GameLoop.cs" />
     <Compile Include="GameObjectEnums.cs" />
     <Compile Include="Texture2DBlender.cs" />
     <Compile Include="AverageCalculator.cs" />
