--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -65,11 +65,23 @@
     <Compile Include="Asperite\PixelFormats\GrayscalePixel.cs" />
     <Compile Include="Asperite\PixelFormats\IndexedPixel.cs" />
     <Compile Include="Asperite\PixelFormats\RGBAPixel.cs" />
-    <Compile Include="Communication\CommandAttribute.cs" />
-    <Compile Include="Communication\CommandHelper.cs" />
-    <Compile Include="Communication\CommunicationChannel.cs" />
-    <Compile Include="Communication\SocketChannel.cs" />
-    <Compile Include="Communication\SocketServer.cs" />
+    <Compile Include="Components\MovementComponent.cs" />
+    <Compile Include="Logguer.cs" />
+    <Compile Include="Network\ClientWorker.cs" />
+    <Compile Include="Network\Commands\MovementCommand.cs" />
+    <Compile Include="Network\Commands\SpawnPlayerObjectCommand.cs" />
+    <Compile Include="Network\Commands\SpawnObjectCommand.cs" />
+    <Compile Include="Network\IClientCommand.cs" />
+    <Compile Include="Network\InProcessChannel.cs" />
+    <Compile Include="Network\IServerCommand.cs" />
+    <Compile Include="Network\NetworkClient.cs" />
+    <Compile Include="Network\CommandAttribute.cs" />
+    <Compile Include="Network\CommandHelper.cs" />
+    <Compile Include="Network\CommunicationChannel.cs" />
+    <Compile Include="NetworkGameObject.cs" />
+    <Compile Include="Network\NetworkServer.cs" />
+    <Compile Include="Network\SocketChannel.cs" />
+    <Compile Include="Network\SocketServer.cs" />
     <Compile Include="ContentService.cs" />
     <Compile Include="Databases\JsonDatabase.cs" />
     <Compile Include="ErrorHelper.cs" />
