--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -70,6 +70,9 @@
     <Compile Include="DataStreaming\BinWriter.cs" />
     <Compile Include="Logguer.cs" />
     <Compile Include="Network\ClientWorker.cs" />
+    <Compile Include="Network\INetworkSerializable.cs" />
+    <Compile Include="Network\NetworkObjectHelper.cs" />
+    <Compile Include="Network\NetworkObjectAttribute.cs" />
     <Compile Include="Network\Commands\MovementCommand.cs" />
     <Compile Include="Network\Commands\SpawnPlayerObjectCommand.cs" />
     <Compile Include="Network\Commands\SpawnObjectCommand.cs" />
