--- a/FNAEngine2D.Tests/FNAEngine2D.Tests.csproj
+++ b/FNAEngine2D.Tests/FNAEngine2D.Tests.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsepriteTest.cs" />
+    <Compile Include="CollisionTest.cs" />
     <Compile Include="CollisionHelperTest.cs" />
     <Compile Include="Communication\SocketChannelTest.cs" />
     <Compile Include="DataStreaming\BinReaderWriterTest.cs" />
