Creation of Space2DTree

--- a/FNAEngine2D.Tests/FNAEngine2D.Tests.csproj
+++ b/FNAEngine2D.Tests/FNAEngine2D.Tests.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="GameMathTest.cs" />
     <Compile Include="Communication\CommandHelperTest.cs" />
+    <Compile Include="SpaceTrees\Space2DTreeTest.cs" />
     <Compile Include="VectorHelperTest.cs" />
   </ItemGroup>
   <ItemGroup>
