--- a/FNAEngine2D/FNAEngine2D.csproj
+++ b/FNAEngine2D/FNAEngine2D.csproj
@@ -71,7 +71,9 @@
     <Compile Include="Components\MovementComponent.cs" />
     <Compile Include="DataStreaming\BinReader.cs" />
     <Compile Include="DataStreaming\BinWriter.cs" />
+    <Compile Include="InputMap.cs" />
     <Compile Include="Logguer.cs" />
+    <Compile Include="MouseButton.cs" />
     <Compile Include="Network\ClientWorker.cs" />
     <Compile Include="Network\Commands\UnspawnObjectCommand.cs" />
     <Compile Include="Network\INetworkSerializable.cs" />
